Fixed line height for labels when they wrap

--- a/docroot/sites/ighn.international.uiowa.edu/modules/ighn_core/sass/ighn.scss
+++ b/docroot/sites/ighn.international.uiowa.edu/modules/ighn_core/sass/ighn.scss
@@ -60,6 +60,7 @@
     border-bottom: 1px solid #ffcd00;
     .field__label {
       font-weight: 800;
+      line-height: 16px;
     }
     .field {
       margin-bottom: 0.5rem;
